--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                         powerful search mechanisms – most importantly the general-purpose</li>
                     <li>distributor is breaking the law, it is relatively easy to force him to stop. Early MP3 Web and
                         FTP sites were commonly “hosted” by universities</li>
-                    <li><a>By 1998, a new form of the darknet began to emerge from technological advances in several
-                        areas. The internet had become mainstream, and as such its protocols and infrastructure</a>></li>
+                    <li>By 1998, a new form of the darknet began to emerge from technological advances in several
+                        areas. The internet had become mainstream, and as such its protocols and infrastructure</li>
                 </ol>
             </div>
         </section>
